--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=
 spring.datasource.password=
 spring.jpa.show-sql=true
 
+logging.level.org.springframework.security=TRACE
